src/test/deca/syntax/invalid/resultats/test28_infinite-lex.res
'{': [@0,331:331='{',<36>,16:0]
'println': [@1,334:340='println',<18>,17:1]
'(': [@2,341:341='(',<34>,17:8]
FLOAT: [@3,342:399='0X0123456789ABCDEFabcdef.0123456789ABCDEFabcdefP0123456789',<46>,17:9]
')': [@4,400:400=')',<35>,17:67]
';': [@5,401:401=';',<39>,17:68]
'}': [@6,403:403='}',<37>,18:0]
